--- a/1Q/style.css
+++ b/1Q/style.css
@@ -6,6 +6,7 @@ body {
     font-style: normal;
     margin: 0;
     background-image: linear-gradient(306deg, rgba(107, 107, 107, 0.04) 0%, rgba(107, 107, 107, 0.04) 8%,rgba(31, 31, 31, 0.04) 8%, rgba(31, 31, 31, 0.04) 100%),linear-gradient(274deg, rgba(228, 228, 228, 0.04) 0%, rgba(228, 228, 228, 0.04) 62%,rgba(54, 54, 54, 0.04) 62%, rgba(54, 54, 54, 0.04) 100%),linear-gradient(389deg, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 37%,rgba(233, 233, 233, 0.04) 37%, rgba(233, 233, 233, 0.04) 100%),linear-gradient(518deg, rgba(201, 201, 201, 0.04) 0%, rgba(201, 201, 201, 0.04) 55%,rgba(47, 47, 47, 0.04) 55%, rgba(47, 47, 47, 0.04) 100%),linear-gradient(535deg, rgba(172, 172, 172, 0.04) 0%, rgba(172, 172, 172, 0.04) 33%,rgba(26, 26, 26, 0.04) 33%, rgba(26, 26, 26, 0.04) 100%),linear-gradient(329deg, rgba(11, 11, 11, 0.04) 0%, rgba(11, 11, 11, 0.04) 38%,rgba(87, 87, 87, 0.04) 38%, rgba(87, 87, 87, 0.04) 100%),linear-gradient(612deg, rgba(199, 199, 199, 0.04) 0%, rgba(199, 199, 199, 0.04) 69%,rgba(4, 4, 4, 0.04) 69%, rgba(4, 4, 4, 0.04) 100%),linear-gradient(578deg, rgba(36, 36, 36, 0.04) 0%, rgba(36, 36, 36, 0.04) 20%,rgba(91, 91, 91, 0.04) 20%, rgba(91, 91, 91, 0.04) 100%),linear-gradient(355deg, rgb(30,94,98),rgb(47,144,149));
+
 }
 
 
@@ -79,17 +80,17 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     height: 70%;
 }
 
 .question {
+    height: 80%;
     width: 33%;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    top: -2px;
-    left: 50px;
-    position: relative;
+
 }
 
 .question img {
@@ -104,9 +105,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0;
-    padding: 0; /* Ensure no extra padding */
-    margin-left: 130px; /* Shift all photos slightly to the right */
+    align-items: center;
 }
 
 /* Adjust answer option lines */
@@ -115,6 +114,7 @@ body {
     flex-direction: row;
     justify-content: flex-start; /* No extra space between elements */
     align-items: center;
+    width: 90%;
     gap: 4px; /* Reduced gap between boxes */
     margin: 0; /* Ensure no margin around the container */
     padding: 0; /* Ensure no padding around the container */
@@ -127,7 +127,6 @@ body {
     height: 80px; /* Box height */
     border: solid 2px rgb(229, 231, 235);
     border-radius: 5px;
-    overflow: hidden;
     transition: 0.2s ease;
     margin: 15px; /* Controls spacing between individual boxes */
 }
@@ -156,6 +155,117 @@ body {
     border-color: rgb(160, 160, 160);
 }
 
+
+
+
+/* ans1 option number */
+#ans1::after {
+    font-weight:400;
+    content: '1';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+    z-index: 10;
+
+}
+
+
+/* ans2 option number */
+#ans2::after{
+    font-weight:400;
+    content: '2';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+}
+
+/* ans3 option number */
+#ans3::after {
+    font-weight:400;
+    content: '3';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+}
+
+
+/* ans4 option number */
+#ans4::after {
+    font-weight:400;
+    content: '4';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+}
+
+/* ans5 option number */
+#ans5::after {
+    font-weight:400;
+    content: '5';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+}
+
+
+/* ans6 option number */
+#ans6::after {
+    font-weight:400;
+    content: '6';
+    color: white;
+    width: 30%;
+    background-color: #222831;
+    display: inline-block;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: -115%;
+    left: -10%;
+}
+
+
 .selected {
     border: 3px solid rgb(29, 78, 216);
 }
@@ -175,7 +285,6 @@ body {
 }
 
 .foot {
-    margin-top: 20px;
     width: 90%;
     height: 100%;
     background-color: #e3e3e3;
@@ -222,7 +331,7 @@ span {
     margin-top: 40px;
 }
 
-.Nbutton, .submitButton, .nextButton {
+.Nbutton, .submitButton, .nextButton{
     border: none;
     width: 30%;
     height: 85%;
@@ -236,22 +345,36 @@ span {
     background-color: #e3e3e3;
     transition: 0.2s ease;
 }
-
-/* Adjust submit and next button styles */
 .submitButton, .nextButton {
     display: none; /* Ensure they start hidden */
-    padding: 10px 20px;
+    padding: -5px -20px ; /* Adjust top/bottom padding for text positioning */
     cursor: pointer;
-    background-color: e3e3e3;
+    background-color: #e3e3e3;
     border-radius: 50px;
+    font-size: 20px;
+    
 }
 
-.submitButton {
-    display: block; 
+.Button {
+    display: block;
 }
 
 .nextButton:hover, .submitButton:hover {
     background-color: #31a5a0;
+}
+.submitButton{
+    position: relative;
+    background-color: transparent;
+    align-items: right;
+    left: 30px;
+}
+.submitButton i{
+    position: relative;
+    bottom: 7px;
+}.submitButton span{
+    color: #222831;
+    position: relative;
+    bottom: 20px;
 }
 
 
@@ -271,10 +394,6 @@ span {
     transition: 0.2s ease;
 }
 
-.submitButton i {
-    font-size: 50px;
-    color: #374151;
-}
 
 .selected {
     border: 2px solid blue;
@@ -307,50 +426,124 @@ a {
     text-decoration: none;
     color: #374151;
 }
-
+@media (max-width: 1400px) {
+    .question{
+        width: 33%;
+        height: 70%;
+    }
+}
+@media(max-width: 1200px){
+    .question{
+        width: 33%;
+        height: 60%;
+    }
+    .answers{
+        width: 69%;
+    }
+}
 @media (max-width: 1100px) {
-    .upper {
+    .upper{
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-
-    .answers {
-        width: 70%;
+    .answers{
+        width: 100%;
     }
-
-    .mainbox {
+    .line1{
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-bottom: 30px;
+    }
+    .line2{
+        margin-top: 30px;
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .answer{
+        width: 15%;
+        height: 120px;
+    }
+    .question{
+        width: 50%;
+    }
+    .mainbox{
         width: 85%;
         height: 900px;
     }
-}
-
+  }
 @media (max-width: 950px) {
-    .answers {
-        width: 80%;
+    .answers{
+        width: 100%;
+    }
+    .answer{
+        width: 20%;
     }
 }
-
-@media (max-width: 820px) {
-    .mainbox {
+@media (max-width: 820px){
+    .mainbox{
         width: 80%;
         height: 900px;
     }
 }
-
 @media (max-width: 790px) {
-    .answers {
+    .answers{
         width: 90%;
     }
-
-    .mainbox {
+    .mainbox{
         width: 90%;
         height: 910px;
     }
 }
+@media (max-width: 790px){
+    .answer{
+        width: 25%;
+    }
+}
+@media (max-width: 620px){
+    .answer{
+        width: 30%;
+        height: 100px;
+        margin: 0;
+        height: 90%;
+    }
+    .line1{
+        width: 100%;
+    }
+    .line2{
+        width: 100%;
+    }
+    .answers{
+        width: 100%;
+        height: 40%;
+    }
+    .question{
+        width: 40%;
+        margin-bottom: 100px;
+    }
 
-@media (max-width: 430px) {
-    .mainbox {
+}
+@media (max-width:500px){
+    .question{
+        height: 35%;
+        width: 80%;
+    }
+    .mainbox{
+        margin-top: 50px;
+    }
+}
+@media (max-width:430px){
+    .mainbox{
         width: 90%;
+    }
+    .question{
+        height: 30%;
+    }
+    .answer{
+        margin: 0;
     }
 }
